A git conflict test is being implemented Trying to get handson conflict resolution in git branching and merging by changing the button test of the main branch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>the book library</h1>
   </header>
   <main>
-    <button>add a new book</button>
+    <button>creating a conflict</button>
+    <button>delete</button>
   </main>
   <footer>snr-roko@2024</footer>
   <script src="script.js"></script>
