--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <main>
     <button>creating a conflict</button>
-    <button>delete</button>
+    <button>I like conflict</button>
   </main>
   <footer>snr-roko@2024</footer>
   <script src="script.js"></script>
