--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>the book library</h1>
   </header>
   <main>
-    <button>creating a conflict</button>
+    <button id="new" class="new">new book</button>
   </main>
   <footer>snr-roko@2024</footer>
   <script src="script.js"></script>
