--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
     <button id="new" class="new">new book</button>
   </header>
   <main>
+    <dialog>
+      <form action="" method="dialog">
+        <div class="form-row">
+          <label for="book-name">Name<span aria-label="required">*</span></label>
+          <input type="text" id="book-name" name="name" required>
+        </div>
+        <div class="form-row">
+          <label for="book-author">Author<span aria-label="required">*</span></label>
+          <input type="text" id="book-author" name="author" required>
+        </div>
+        <div class="form-row">
+          <label for="book-genre">Select Genre<span aria-label="required">*</span></label>
+          <select id="book-genre" name="genre">
+            <option value="literary-fiction">Literary Fiction</option>
+            <option value="historical-fiction">Historical Fiction</option>
+            <option value="scientific-fiction">Scientific Fiction</option>
+            <option value="fantasy">Fantasy</option>
+            <option value="mystery">Mystery</option>
+            <option value="thriller">Thriller</option>
+            <option value="horror">Horror</option>
+            <option value="romance">Romance</option>
+            <option value="adventure">Adventure</option>
+            <option value="young-adult">Young Adult</option>
+            <option value="action">Action</option>
+            <option value="children-fiction">Children Fiction</option>
+            <option value="comics">Graphic Novel and Comics</option>
+            <option value="biography">Biography/AutoBiography</option>
+            <option value="memoir">Memoir</option>
+            <option value="history">History</option>
+            <option value="self-help">Self-Help</option>
+            <option value="true-crime">True Crime</option>
+            <option value="science">Science</option>
+            <option value="travel">Travel</option>
+          </select>
+        </div>
+        <div class="form-row">
+          <label for="book-pages">Pages</label>
+          <input type="number" id="book-pages" name="pages" required>
+        </div>
+        <button id="close-dialog" type="submit">Submit</button>
+
+      </form>
+    </dialog>
   </main>
   <footer>snr-roko@2024</footer>
   <script src="script.js"></script>
