--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="form-row">
           <label for="book-pages">Pages</label>
-          <input type="number" id="book-pages" name="pages" required>
+          <input type="number" id="book-pages" name="pages" min="0" required>
         </div>
         <div class="form-row">
           <label for="book-rating">Rating(0-5)</label>
